--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Release 2.0 - Security Microservice",
   "main": "index.js",
   "scripts": {
-    "ts": "npx tsc -w",
-    "dev": "nodemon ./build/src/server/index.js --exec babel-node",
-    "start": "npx tsc && babel-node ./build/src/server/index.js"
+    "start": "npm run build && babel-node ./build/src/server/index.js",
+    "build": "tsc -p .",
+    "dev": "nodemon src/server/index.ts"
   },
   "repository": {
     "type": "git",
@@ -37,14 +37,15 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.13"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
+    "nodemon": "^2.0.13",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
 }
