--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Release 2.0 - Security Microservice",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && babel-node ./build/src/server/index.js",
+    "start": "npm run build && babel-node ./build/src/index.js",
     "build": "tsc -p .",
-    "dev": "nodemon src/server/index.ts"
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -23,21 +23,21 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/helmet": "^4.0.0",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.0",
+    "ts-transformer-keys": "^0.4.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
