--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "nodemon": "^2.0.13",
